# SLMs-experiments

./: .gitignore  AGENT.md  AGENTS.md  ExperimentDesign.md  README.md  improvements.md  pyproject.toml  requirements.txt
.cursor/rules/: python-environment.mdc
data/cefr_sp/: README.md
data/kvl/: README.md  kvl_lookup_cn.json  kvl_lookup_de.json  kvl_lookup_es.json
data/vocabularies/: filtered_starters_vocab.txt
docs/: beam-search.html  clusteruy.md  experiment-setup-recommendations.md  guided-decoding-flow.html  guided-decoding.md  interventions.md  kvl-beam-flow.html  kvl_beamsearch.md  metrics.md  models.md
results/: smoke_single.txt  spike_out.txt
scripts/: _tmp_diag_logit_bias_sentence_start.py  audit_kvl_token_index.py  build_kvl_lookup.py  compare_kvl_smoke_results.py  diag_tinyllama_kvl_beam.py  download_cefr_sp_ckpt.py  run_kvl_beam_csv.py  smoke_cefr_sp.py  smoke_kvl_beam_variants.py  spike_kvl_beam_eval.py
tests/: conftest.py  test_a1_criteria.py  test_a1_token_index.py  test_beam_integration.py  test_cefr_sp_metrics.py  test_cli.py  test_configs.py  test_constrained_decoder.py  test_generate_integration.py  test_guided_integration.py  test_human_eval.py  test_kvl_beam_decoder.py  test_kvl_beam_integration.py  test_kvl_metrics.py  test_kvl_token_index.py  test_models.py  test_phase1_runner.py  test_phase2_beam.py  test_phase2_guided.py  test_phase2_kvl_beam.py  test_phase2_weights.py  test_pipeline.py  test_pipeline_guided.py  test_pipeline_kvl_beam.py  test_plot.py  test_prompting_shots.py  test_run_store.py  test_scaffold.py  test_word_tracker.py
(+57 files in other folders)
