[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-experiments"
version = "0.1.0"
description = "SLM inference-time intervention evaluation framework"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.optional-dependencies]
# Optional CEFR-SP sentence scorer (Arase et al. Zenodo ckpt). Not required for core runs.
# Target Lightning 2.x; if load_from_checkpoint fails, pin a 2.x release compatible with your torch.
cefr-sp = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "pytorch-lightning>=2.0.0,<3",
]
dev = ["pytest>=7.0"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
slm_experiments = "slm_experiments.cli:main"
